# addtoList

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml
addtoList/: asgi.py  db.sqlite3  settings.py
addtoList/addtoList/: settings.py  urls.py  wsgi.py
addtoList/main/: admin.py  forms.py  models.py  urls.py  views.py
addtoList/static/css/: main.css  style.css
addtoList/static/js/: script.js
addtoList/templates/: 404.html  dashboard.html  index.html  login.html  signup.html
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_groceryitem_alter_grocery_options.py  0003_remove_grocery_quantity.py  0004_delete_groceryitem_grocery_price_grocery_quantity.py  0005_alter_grocery_price_alter_grocery_quantity.py  0006_grocery_category.py  0007_alter_grocery_category.py  0008_alter_grocery_category.py  0009_grocery_note.py  0010_alter_grocery_options.py  0011_alter_grocery_category_alter_grocery_note_and_more.py
static/css/: 404.css  main.css  style.css
static/js/: index.js  script.js
templates/: dashboard.html  edit.html  index.html  login.html  main.html  signup.html
