[tool.poetry]
name = "add-to-list"
version = "0.1.0"
description = "A Django App to keep track of your grocery list"
authors = ["Zainab Lawal <zainablaw1012@gmail.com>"]
readme = "README.md"
packages = [{include = "add_to_list"}]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.5.2"
autopep8 = "1.6.0"
dj-database-url = "0.5.0"
Django = "4.0.6"
django-heroku = "0.3.1"
gunicorn = "20.1.0"
psycopg2 = "2.9.3"
pycodestyle = "2.8.0"
sqlparse = "0.4.2"
toml = "0.10.2"
tzdata = "2022.1"
whitenoise = "6.2.0"
psycopg-binary = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
